--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-It's proekt, bro. nPOEKT in Russian.
+DEFAULT.py-дефолтные значения для всего проекта
+map.py-все что связано с картой(экран, расположение элементов на карте)
+mapobject.py-элементы на карте
+event.py-обработка событий(не найдено нормальной либы)
+main.py-главный цикл
