--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 DEFAULT.py-дефолтные значения для всего проекта
 map.py-все что связано с картой(экран, расположение элементов на карте)
 mapobject.py-элементы на карте
-event.py-обработка событий(не найдено нормальной либы)
+event.py-обработка событий
 main.py-главный цикл
+
+Доп ПО требуемое для работы:
+  -python3
+  -pynput(либа для обработки событий нажатия клавиш)
