--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 DEFAULT.py-дефолтные значения для всего проекта
 map.py-все что связано с картой(экран, расположение элементов на карте)
 mapobject.py-элементы на карте
-event.py-обработка событий
+event.py-обработка событий(все еще в поиске библиотеки)
 main.py-главный цикл
 
 Доп ПО требуемое для работы:
   -python3
-  -pynput(либа для обработки событий нажатия клавиш)
